# agricultural_crops_detection

./: .gitignore  README.md  api_config.py  cifar10_cnn.ipynb  config.py  create_s3_block.py  main.py  makefile  neural_networks.py  orchestrate.py  prefect.yaml  pyproject.toml
.github/workflows/: base_workflow.yaml
api/routes/: prediction.py
docker/: Dockerfile.api  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
lib/: base_prediction.py  constants.py  mlflow_prediction.py  pytorch_prediction.py  transformation.py
models/: model_cifar.pt
notebooks/: agricultural_images plightning.ipynb  agricultural_images.ipynb  cifar10_cnn.ipynb
tests/: test_integration.py  test_units.py
