[tool.poetry]
name = "cifar-cnn"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "1.12.1", source="torch"}
torchaudio = { version = "0.12.1", source="torch"}
torchvision = { version = "0.13.1", source="torch"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
mlflow = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true