[tool.poetry]
name = "cifar-cnn"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
structlog = "^24.2.0"
torch = {version = "^2.3.0+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.0+cu121", source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
mlflow = "^2.13.1"
setuptools = "^70.0.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"