[tool.poetry]
name = "cifar-cnn"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
structlog = "^24.2.0"
torch = {version = "^2.3.0+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.0+cu121", source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
setuptools = "^70.0.0"
mlflow = "2.13.0"
flake8 = "^7.0.0"
pylint = "^3.2.3"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
mypy = "^1.10.0"
bandit = "^1.7.8"
pytest = "^8.2.2"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"